my-apps/media/immich/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
