my-apps/media/immich/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-server
  template:
    metadata:
      labels:
        app: immich-server
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: immich-server
          image: ghcr.io/immich-app/immich-server:release
          ports:
            - containerPort: 2283
              name: http
          volumeMounts:
            - name: upload
              mountPath: /usr/src/app/upload
              subPath: Pictures
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 4Gi
              cpu: 2000m
      volumes:
        - name: upload
          persistentVolumeClaim:
            claimName: immich-upload
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      enableServiceLinks: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: immich-machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release
          volumeMounts:
            - name: cache
              mountPath: /cache
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 4Gi
              cpu: 2000m
      volumes:
        - name: cache
          persistentVolumeClaim:
            claimName: immich-model-cache
