my-apps/media/immich/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  selector:
    app: immich-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-postgres
  namespace: immich
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
        - name: postgres
          image: ghcr.io/immich-app/postgres:14-vectorchord0.4.3-pgvectors0.2.0@sha256:41eacbe83eca995561fe43814fd4891e16e39632806253848efaf04d3c8a8b84
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
              subPath: pgdata
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 4Gi
              cpu: 2000m
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: immich-postgres
