my-apps/media/immich/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-redis
  namespace: immich
spec:
  selector:
    app: immich-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
        - name: redis
          image: docker.io/valkey/valkey:8-bookworm@sha256:fea8b3e67b15729d4bb70589eb03367bab9ad1ee89c876f54327fc7c6e618571
          ports:
            - containerPort: 6379
              name: redis
          resources:
            requests:
              memory: 64Mi
              cpu: 25m
            limits:
              memory: 512Mi
              cpu: 500m
