my-apps/media/immich/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  type: ClusterIP
  selector:
    app: immich-server
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
