my-apps/media/immich/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Immich"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "sh-immich"
    gethomepage.dev/href: "https://immich.serverops.live"
    gethomepage.dev/pod-selector: "app=immich-server"
spec:
  hostnames:
    - immich.serverops.live
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: immich
          port: 80
          weight: 1
